--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,7 +5,11 @@ set(PROJECT_UNIT_TESTS_NAME ${PROJECT_NAME_STR}_unit_tests)
 
 find_package(Boost COMPONENTS system filesystem unit_test_framework REQUIRED)
 
-add_executable(${PROJECT_UNIT_TESTS_NAME} test_main.cpp lin_alg.cpp transformation_test.cpp)
+add_executable(${PROJECT_UNIT_TESTS_NAME}
+    test_main.cpp
+    lin_alg.cpp
+    shapes_test.cpp
+    transformation_test.cpp)
 
 add_definitions(-DBOOST_TEST_DYN_LINK)
 target_link_libraries(
@@ -14,6 +18,7 @@ target_link_libraries(
     ${Boost_SYSTEM_LIBRARY}
     ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
     lin_alg
+    renderer
 )
 
 enable_testing()
