added stuff to render balls moving across screen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,5 +17,10 @@ target_link_libraries(Main lin_alg)
 target_link_libraries(Main renderer)
 target_link_libraries(Main ${OpenCV_LIBS} )
 
+
+add_executable(render_balls render_balls.cpp)
+target_link_libraries(render_balls lin_alg)
+target_link_libraries(render_balls renderer)
+
 enable_testing()
 
