--- a/renderer/test/CMakeLists.txt
+++ b/renderer/test/CMakeLists.txt
@@ -32,3 +32,4 @@ endfunction()
 enable_testing()
 add_boost_test(main.cpp renderer)
 add_boost_test(plane.cpp renderer)
+add_boost_test(shapes.cpp renderer)
