update polynomial tests

--- a/polynomial/test/CMakeLists.txt
+++ b/polynomial/test/CMakeLists.txt
@@ -5,28 +5,35 @@ set(PROJECT_UNIT_TESTS_NAME ${PROJECT_NAME_STR}_unit_tests)
 
 find_package(Boost COMPONENTS system filesystem unit_test_framework REQUIRED)
 
-file(
-    GLOB_RECURSE ALL_TEST
-    "*.cpp"
-)
+function(add_boost_test SOURCE_FILE_NAME DEPENDENCY_LIB)
+    get_filename_component(TEST_EXECUTABLE_NAME ${SOURCE_FILE_NAME} NAME_WE)
 
-set(PROJECT_UNIT_TESTS_NAME ${PROJECT_NAME}_unit_tests)
+    add_executable(${TEST_EXECUTABLE_NAME} ${SOURCE_FILE_NAME})
+    target_link_libraries(${TEST_EXECUTABLE_NAME} 
+                          ${DEPENDENCY_LIB}
+                          ${Boost_FILESYSTEM_LIBRARY}
+                          ${Boost_SYSTEM_LIBRARY}
+                          ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
+    )
 
-find_package(Boost COMPONENTS system filesystem unit_test_framework REQUIRED)
+    file(READ "${SOURCE_FILE_NAME}" SOURCE_FILE_CONTENTS)
+    
+    string(REGEX MATCHALL "BOOST_AUTO_TEST_CASE\\( *([A-Za-z_0-9]+) *\\)" 
+           FOUND_TESTS ${SOURCE_FILE_CONTENTS})
 
-add_executable(${PROJECT_UNIT_TESTS_NAME}
-  ${ALL_TEST}
-)
-
-add_definitions(-DBOOST_TEST_DYN_LINK)
-target_link_libraries(
-    ${PROJECT_UNIT_TESTS_NAME}
-    ${Boost_FILESYSTEM_LIBRARY}
-    ${Boost_SYSTEM_LIBRARY}
-    ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
-    polynomial
-)
-
+    # message(PROJECT_SOURCE_DIR="${FOUND_TESTS}")
+    foreach(HIT ${FOUND_TESTS})
+        string(REGEX REPLACE ".*\\( *([A-Za-z_0-9]+) *\\).*" "\\1" TEST_NAME ${HIT})
+        
+        add_test(NAME "${TEST_EXECUTABLE_NAME}.${TEST_NAME}" 
+                 COMMAND ${TEST_EXECUTABLE_NAME}
+                 --run_test=*/${TEST_NAME} --catch_system_error=yes)
+    endforeach()
+endfunction()
 
 enable_testing()
-add_test(PolynomialTest ${PROJECT_UNIT_TESTS_NAME})
+
+enable_testing()
+add_boost_test(quadratic.cpp polynomial)
+add_boost_test(cubic.cpp polynomial)
+add_boost_test(quartic.cpp polynomial)
