update renderer; fix reference issues; add intersection reflection test

--- a/renderer/test/CMakeLists.txt
+++ b/renderer/test/CMakeLists.txt
@@ -33,3 +33,4 @@ enable_testing()
 add_boost_test(main.cpp renderer)
 add_boost_test(plane.cpp renderer)
 add_boost_test(shapes.cpp renderer)
+add_boost_test(intersection.cpp renderer)
