implement checkerboard; fix sphere intersection

--- a/lin_alg/test/CMakeLists.txt
+++ b/lin_alg/test/CMakeLists.txt
@@ -32,3 +32,4 @@ endfunction()
 enable_testing()
 add_boost_test(vector.cpp lin_alg)
 add_boost_test(transformation.cpp lin_alg)
+add_boost_test(coordinate.cpp lin_alg)
