--- a/renderer/test/CMakeLists.txt
+++ b/renderer/test/CMakeLists.txt
@@ -34,3 +34,4 @@ add_boost_test(main.cpp renderer)
 add_boost_test(plane.cpp renderer)
 add_boost_test(shapes.cpp renderer)
 add_boost_test(intersection.cpp renderer)
+add_boost_test(torus.cpp renderer)
