--- a/renderer/test/CMakeLists.txt
+++ b/renderer/test/CMakeLists.txt
@@ -35,3 +35,4 @@ add_boost_test(plane.cpp renderer)
 add_boost_test(shapes.cpp renderer)
 add_boost_test(intersection.cpp renderer)
 add_boost_test(torus.cpp renderer)
+add_boost_test(triangle.cpp renderer)
