--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.5.0)
+cmake_minimum_required(VERSION 3.22.0)
 project(gcode_renderer VERSION 0.1.0 LANGUAGES C CXX)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
@@ -11,6 +11,7 @@ find_package(Curses REQUIRED)
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 
 add_subdirectory(lin_alg)
+add_subdirectory(tensor)
 add_subdirectory(polynomial)
 add_subdirectory(renderer)
 add_subdirectory(test)
